--- a/packages/FodAnimationResources/AndroidManifest.xml
+++ b/packages/FodAnimationResources/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cherish.fod.animations"
+    package="com.lotus.fod.animations"
     android:versionCode="1"
     android:versionName="1.0">
 
